--- a/start-opencv/start-opencv.vcxproj.filters
+++ b/start-opencv/start-opencv.vcxproj.filters
@@ -128,6 +128,12 @@
     <ClCompile Include="inpaiting.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="delaunay.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="lucas-kanade.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
