--- a/start-opencv/start-opencv.vcxproj.filters
+++ b/start-opencv/start-opencv.vcxproj.filters
@@ -143,6 +143,9 @@
     <ClCompile Include="nihe_2d.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="face.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
